--- a/.github/workflows/dockerize-meep.yaml
+++ b/.github/workflows/dockerize-meep.yaml
@@ -8,6 +8,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - run: |
+        wget https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh 
         echo $DOCKER_PASSWORD | docker login --username $DOCKER_USERNAME --password-stdin
         docker build -t soerensofke/meep:latest .
         docker push soerensofke/meep:latest       
