--- a/.github/workflows/dockerize-meep.yaml
+++ b/.github/workflows/dockerize-meep.yaml
@@ -17,7 +17,7 @@ jobs:
         docker build -t soerensofke/meep:latest .
         docker export $(docker create soerensofke/meep:latest) | gzip > latest.tar.gz
     - name: Push to docker hub
-      run: 
+      run: |
         echo $DOCKER_PASSWORD | docker login --username $DOCKER_USERNAME --password-stdin
         docker push soerensofke/meep:latest        
       env:
