--- a/.github/workflows/dockerize-meep.yaml
+++ b/.github/workflows/dockerize-meep.yaml
@@ -38,7 +38,7 @@ jobs:
       with:
           upload_url: ${{ steps.release_on_github.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
           asset_path: ./meep-rootfs.tar.gz
-          asset_name: meep-rootfs-v{{ github.run_number }}.tar.gz
+          asset_name: meep-rootfs-v${{ github.run_number }}.tar.gz
           asset_content_type: application/gzip
                     
     
